[package]
name = "posts"
version = "0.1.0"
authors = ["MightyAlex200 <quantumtraveling@gmail.com>"]
edition = "2018"

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
hdk = { git = "https://github.com/holochain/holochain-rust", tag = "0.0.25-alpha1" }
hdk-proc-macros = { git = "https://github.com/holochain/holochain-rust", tag = "0.0.25-alpha1" }
holochain_json_derive = "0.0.15"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
